feat: implement login with google, auth guards and login full screen

--- a/apps/mobile/i18n/locales/en/account.json
+++ b/apps/mobile/i18n/locales/en/account.json
@@ -33,6 +33,23 @@
       "description": "Permanently delete your account"
     }
   },
+  "overview": {
+    "open": "Open",
+    "logout": "Logout",
+    "app_version": "App version {{version}}",
+    "account": {
+      "description": "Profile and identity settings"
+    },
+    "security": {
+      "description": "Review all security settings"
+    },
+    "preferences": {
+      "description": "Theme and sync options"
+    },
+    "danger": {
+      "description": "Sensitive destructive actions"
+    }
+  },
   "preferences": {
     "title": "Preferences",
     "dark_mode": {
