--- a/apps/mobile/i18n/locales/en/auth.json
+++ b/apps/mobile/i18n/locales/en/auth.json
@@ -10,6 +10,17 @@
     "legal_prefix": "By continuing, you agree to our",
     "terms": "Terms of Service",
     "privacy": "Privacy Policy",
-    "skip": "Skip"
+    "skip": "Skip",
+    "email": {
+      "label": "Email",
+      "placeholder": "email@example.com"
+    },
+    "password": {
+      "label": "Password",
+      "placeholder": "••••••••"
+    },
+    "sign_in": "Sign in",
+    "signing_in": "Signing in…",
+    "sign_in_with_email": "Sign in with email"
   }
 }
