--- a/apps/mobile/i18n/locales/es/auth.json
+++ b/apps/mobile/i18n/locales/es/auth.json
@@ -10,6 +10,17 @@
     "legal_prefix": "Al continuar, aceptas nuestros",
     "terms": "Términos de Servicio",
     "privacy": "Política de Privacidad",
-    "skip": "Saltar"
+    "skip": "Saltar",
+    "email": {
+      "label": "Correo electrónico",
+      "placeholder": "correo@ejemplo.com"
+    },
+    "password": {
+      "label": "Contraseña",
+      "placeholder": "••••••••"
+    },
+    "sign_in": "Iniciar sesión",
+    "signing_in": "Iniciando…",
+    "sign_in_with_email": "Iniciar sesión con correo"
   }
 }
