fix: add a better ui sign in page

--- a/apps/mobile/i18n/locales/es/auth.json
+++ b/apps/mobile/i18n/locales/es/auth.json
@@ -21,6 +21,8 @@
     },
     "sign_in": "Iniciar sesión",
     "signing_in": "Iniciando…",
-    "sign_in_with_email": "Iniciar sesión con correo"
+    "sign_in_with_email": "Iniciar sesión con correo",
+    "dont_have_account": "¿No tienes una cuenta?",
+    "sign_up": "Regístrate"
   }
 }
