--- a/apps/mobile/i18n/locales/en/auth.json
+++ b/apps/mobile/i18n/locales/en/auth.json
@@ -21,6 +21,8 @@
     },
     "sign_in": "Sign in",
     "signing_in": "Signing in…",
-    "sign_in_with_email": "Sign in with email"
+    "sign_in_with_email": "Sign in with email",
+    "dont_have_account": "Don't have an account?",
+    "sign_up": "Sign up"
   }
 }
