feat: add login and sign up final screens

--- a/apps/mobile/i18n/locales/en/auth.json
+++ b/apps/mobile/i18n/locales/en/auth.json
@@ -23,6 +23,30 @@
     "signing_in": "Signing in…",
     "sign_in_with_email": "Sign in with email",
     "dont_have_account": "Don't have an account?",
-    "sign_up": "Sign up"
+    "sign_up": "Sign up",
+    "create_account": "Create account",
+    "sign_up_subtitle": "Sign up to get started",
+    "first_name_label": "First Name",
+    "first_name_placeholder": "John",
+    "last_name_label": "Last Name",
+    "last_name_placeholder": "Doe",
+    "confirm_password_label": "Confirm Password",
+    "confirm_password_placeholder": "••••••••",
+    "creating_account": "Creating account…",
+    "already_have_account": "Already have an account?",
+    "account_created": "Account created",
+    "errors": {
+      "invalid_credentials": "Invalid email or password",
+      "password_compromised": "This password has been compromised in a data breach. Please choose a different password.",
+      "email_not_verified": "Email not verified",
+      "user_already_exists": "User already exists",
+      "password_too_short": "Password too short",
+      "password_too_long": "Password too long",
+      "provider_not_found": "Provider not found",
+      "invalid_token": "Invalid token",
+      "two_factor_not_enabled": "Two-factor authentication is not enabled",
+      "otp_expired": "OTP expired",
+      "invalid_code": "Invalid code"
+    }
   }
 }
