--- a/apps/mobile/i18n/locales/es/auth.json
+++ b/apps/mobile/i18n/locales/es/auth.json
@@ -23,6 +23,30 @@
     "signing_in": "Iniciando…",
     "sign_in_with_email": "Iniciar sesión con correo",
     "dont_have_account": "¿No tienes una cuenta?",
-    "sign_up": "Regístrate"
+    "sign_up": "Regístrate",
+    "create_account": "Crear cuenta",
+    "sign_up_subtitle": "Regístrate para comenzar",
+    "first_name_label": "Nombre",
+    "first_name_placeholder": "Juan",
+    "last_name_label": "Apellido",
+    "last_name_placeholder": "Pérez",
+    "confirm_password_label": "Confirmar Contraseña",
+    "confirm_password_placeholder": "••••••••",
+    "creating_account": "Creando cuenta…",
+    "already_have_account": "¿Ya tienes una cuenta?",
+    "account_created": "Cuenta creada",
+    "errors": {
+      "invalid_credentials": "Correo o contraseña inválidos",
+      "email_not_verified": "Correo no verificado",
+      "password_compromised": "Esta contraseña ha sido comprometida en una violación de datos. Por favor, elige una contraseña diferente.",
+      "user_already_exists": "El usuario ya existe",
+      "password_too_short": "La contraseña es demasiado corta",
+      "password_too_long": "La contraseña es demasiado larga",
+      "provider_not_found": "Proveedor no encontrado",
+      "invalid_token": "Token inválido",
+      "two_factor_not_enabled": "La autenticación de dos factores no está habilitada",
+      "otp_expired": "El código OTP expiró",
+      "invalid_code": "Código inválido"
+    }
   }
 }
