fix: add error messages translated and better state for buttons and inputs

--- a/apps/mobile/i18n/locales/es/auth.json
+++ b/apps/mobile/i18n/locales/es/auth.json
@@ -38,7 +38,7 @@
     "errors": {
       "invalid_credentials": "Correo o contraseña inválidos",
       "email_not_verified": "Correo no verificado",
-      "password_compromised": "Esta contraseña ha sido comprometida en una violación de datos. Por favor, elige una contraseña diferente.",
+      "password_compromised": "Esta contraseña apareció en una brecha. Usa otra distinta.",
       "user_already_exists": "El usuario ya existe",
       "password_too_short": "La contraseña es demasiado corta",
       "password_too_long": "La contraseña es demasiado larga",
