--- a/apps/mobile/i18n/locales/en/auth.json
+++ b/apps/mobile/i18n/locales/en/auth.json
@@ -37,7 +37,7 @@
     "account_created": "Account created",
     "errors": {
       "invalid_credentials": "Invalid email or password",
-      "password_compromised": "This password has been compromised in a data breach. Please choose a different password.",
+      "password_compromised": "This password was found in a breach. Use a different one.",
       "email_not_verified": "Email not verified",
       "user_already_exists": "User already exists",
       "password_too_short": "Password too short",
