feat: add recover password screen

--- a/apps/mobile/i18n/locales/en/auth.json
+++ b/apps/mobile/i18n/locales/en/auth.json
@@ -24,6 +24,7 @@
     "sign_in_with_email": "Sign in with email",
     "dont_have_account": "Don't have an account?",
     "sign_up": "Sign up",
+    "forgot_password": "Forgot password?",
     "create_account": "Create account",
     "sign_up_subtitle": "Sign up to get started",
     "first_name_label": "First Name",
@@ -35,6 +36,19 @@
     "creating_account": "Creating account…",
     "already_have_account": "Already have an account?",
     "account_created": "Account created",
+    "recover": {
+      "title": "Recover password",
+      "subtitle": "Enter your email and we'll send you a reset link.",
+      "email_sent_title": "Check your email",
+      "email_sent_description": "If an account exists for this email, we've sent a reset link.",
+      "helper_note": "We'll send a secure link to this address.",
+      "spam_note": "Please also check your spam or junk folder just in case.",
+      "send_link": "Send recovery link",
+      "sending": "Sending…",
+      "open_email_app": "Open email app",
+      "resend_email": "Resend email",
+      "back_to_sign_in": "Back to Sign in"
+    },
     "errors": {
       "invalid_credentials": "Invalid email or password",
       "password_compromised": "This password was found in a breach. Use a different one.",
