--- a/apps/mobile/i18n/locales/es/auth.json
+++ b/apps/mobile/i18n/locales/es/auth.json
@@ -24,6 +24,7 @@
     "sign_in_with_email": "Iniciar sesión con correo",
     "dont_have_account": "¿No tienes una cuenta?",
     "sign_up": "Regístrate",
+    "forgot_password": "¿Olvidaste tu contraseña?",
     "create_account": "Crear cuenta",
     "sign_up_subtitle": "Regístrate para comenzar",
     "first_name_label": "Nombre",
@@ -35,6 +36,19 @@
     "creating_account": "Creando cuenta…",
     "already_have_account": "¿Ya tienes una cuenta?",
     "account_created": "Cuenta creada",
+    "recover": {
+      "title": "Recuperar contraseña",
+      "subtitle": "Ingresa tu correo y te enviaremos un enlace para restablecerla.",
+      "email_sent_title": "Revisa tu correo",
+      "email_sent_description": "Si existe una cuenta para este correo, hemos enviado un enlace de restablecimiento.",
+      "helper_note": "Enviaremos un enlace seguro a esta dirección.",
+      "spam_note": "Por las dudas, revisa también la carpeta de spam o correo no deseado.",
+      "send_link": "Enviar enlace de recuperación",
+      "sending": "Enviando…",
+      "open_email_app": "Abrir app de correo",
+      "resend_email": "Reenviar correo",
+      "back_to_sign_in": "Volver a iniciar sesión"
+    },
     "errors": {
       "invalid_credentials": "Correo o contraseña inválidos",
       "email_not_verified": "Correo no verificado",
