feat: add all pr rabbit changes

--- a/apps/mobile/i18n/locales/en/auth.json
+++ b/apps/mobile/i18n/locales/en/auth.json
@@ -21,6 +21,7 @@
     },
     "sign_in": "Sign in",
     "signing_in": "Signing in…",
+    "signed_in": "Signed in successfully.",
     "sign_in_with_email": "Sign in with email",
     "dont_have_account": "Don't have an account?",
     "sign_up": "Sign up",
@@ -50,12 +51,27 @@
       "back_to_sign_in": "Back to Sign in"
     },
     "errors": {
+      "password_required": "Password is required",
+      "email_required": "Email is required",
+      "email_invalid": "Invalid email address",
+      "password_complexity": "Password must include uppercase, lowercase, number and special character",
+      "first_name_required": "First name is required",
+      "first_name_too_long": "First name must be less than 50 characters",
+      "first_name_invalid": "First name can contain letters, numbers, and spaces",
+      "last_name_required": "Last name is required",
+      "last_name_too_long": "Last name must be less than 50 characters",
+      "last_name_invalid": "Last name can contain letters, numbers, and spaces",
+      "confirm_password_required": "Confirm password is required",
+      "confirm_password_too_short": "Confirm password must be at least {{min}} characters",
+      "confirm_password_too_long": "Confirm password must be less than {{max}} characters",
+      "confirm_password_complexity": "Confirm password must include uppercase, lowercase, number and special character",
+      "passwords_do_not_match": "Passwords do not match",
+      "password_too_short": "Password must be at least {{min}} characters",
+      "password_too_long": "Password must be less than {{max}} characters",
       "invalid_credentials": "Invalid email or password",
       "password_compromised": "This password was found in a breach. Use a different one.",
       "email_not_verified": "Email not verified",
       "user_already_exists": "User already exists",
-      "password_too_short": "Password too short",
-      "password_too_long": "Password too long",
       "provider_not_found": "Provider not found",
       "invalid_token": "Invalid token",
       "two_factor_not_enabled": "Two-factor authentication is not enabled",
