--- a/apps/mobile/i18n/locales/es/auth.json
+++ b/apps/mobile/i18n/locales/es/auth.json
@@ -21,6 +21,7 @@
     },
     "sign_in": "Iniciar sesión",
     "signing_in": "Iniciando…",
+    "signed_in": "Sesión iniciada correctamente.",
     "sign_in_with_email": "Iniciar sesión con correo",
     "dont_have_account": "¿No tienes una cuenta?",
     "sign_up": "Regístrate",
@@ -50,12 +51,27 @@
       "back_to_sign_in": "Volver a iniciar sesión"
     },
     "errors": {
+      "password_required": "La contraseña es obligatoria",
+      "email_required": "El correo electrónico es obligatorio",
+      "email_invalid": "Correo electrónico no válido",
+      "password_complexity": "La contraseña debe incluir mayúscula, minúscula, número y carácter especial",
+      "first_name_required": "El nombre es obligatorio",
+      "first_name_too_long": "El nombre debe tener menos de 50 caracteres",
+      "first_name_invalid": "El nombre puede contener letras, números y espacios",
+      "last_name_required": "El apellido es obligatorio",
+      "last_name_too_long": "El apellido debe tener menos de 50 caracteres",
+      "last_name_invalid": "El apellido puede contener letras, números y espacios",
+      "confirm_password_required": "La confirmación de contraseña es obligatoria",
+      "confirm_password_too_short": "La confirmación de contraseña debe tener al menos {{min}} caracteres",
+      "confirm_password_too_long": "La confirmación de contraseña debe tener menos de {{max}} caracteres",
+      "confirm_password_complexity": "La confirmación debe incluir mayúscula, minúscula, número y carácter especial",
+      "passwords_do_not_match": "Las contraseñas no coinciden",
+      "password_too_short": "La contraseña debe tener al menos {{min}} caracteres",
+      "password_too_long": "La contraseña debe tener menos de {{max}} caracteres",
       "invalid_credentials": "Correo o contraseña inválidos",
       "email_not_verified": "Correo no verificado",
       "password_compromised": "Esta contraseña apareció en una brecha. Usa otra distinta.",
       "user_already_exists": "El usuario ya existe",
-      "password_too_short": "La contraseña es demasiado corta",
-      "password_too_long": "La contraseña es demasiado larga",
       "provider_not_found": "Proveedor no encontrado",
       "invalid_token": "Token inválido",
       "two_factor_not_enabled": "La autenticación de dos factores no está habilitada",
