feat: add mobile reset and recover password functions

--- a/apps/mobile/i18n/locales/en/auth.json
+++ b/apps/mobile/i18n/locales/en/auth.json
@@ -50,6 +50,13 @@
       "resend_email": "Resend email",
       "back_to_sign_in": "Back to Sign in"
     },
+    "reset": {
+      "title": "Reset password",
+      "subtitle": "Enter your new password below.",
+      "update_password": "Update password",
+      "updating": "Updating…",
+      "updated_success": "Your password has been updated. You can now sign in."
+    },
     "errors": {
       "password_required": "Password is required",
       "email_required": "Email is required",
