--- a/apps/mobile/i18n/locales/es/auth.json
+++ b/apps/mobile/i18n/locales/es/auth.json
@@ -50,6 +50,13 @@
       "resend_email": "Reenviar correo",
       "back_to_sign_in": "Volver a iniciar sesión"
     },
+    "reset": {
+      "title": "Restablecer contraseña",
+      "subtitle": "Ingresa tu nueva contraseña.",
+      "update_password": "Actualizar contraseña",
+      "updating": "Actualizando…",
+      "updated_success": "Tu contraseña ha sido actualizada. Ahora puedes iniciar sesión."
+    },
     "errors": {
       "password_required": "La contraseña es obligatoria",
       "email_required": "El correo electrónico es obligatorio",
